force-app/main/default/objects/Delivery_Track__c/Delivery_Track__c.object-meta.xml
<CustomObject>
    <label>Delivery Track</label>
    <nameField>
        <label>Delivery Track Id</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>DeliveryTracks</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>