force-app/main/default/objects/Delivery_Track__c/fields/Final_Status__c.field-meta.xml
<CustomField>
    <fullName>Final_Status__c</fullName>
    <formula>CASE(
    Status__c,
    &apos;UNDELIVERED&apos;, &apos;NDR&apos;,
    &apos;reached at origin&apos;, &apos;RTO&apos;,
    &apos;OUT FOR DELIVERY&apos;, &apos;OUT FOR DELIVERY&apos;,
    TEXT(Status__c))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Final Status</label>
    <type>Text</type>
</CustomField>