force-app/main/default/objects/Delivery_Track__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>PENDING PICKUP</fullName>
            </value>
            <value>
                <fullName>PICKUP DONE</fullName>
            </value>
            <value>
                <fullName>IN-TRANSIT</fullName>
            </value>
            <value>
                <fullName>OUT FOR DELIVERY</fullName>
            </value>
            <value>
                <fullName>DELIVERED</fullName>
            </value>
            <value>
                <fullName>picked up</fullName>
            </value>
            <value>
                <fullName>in transit</fullName>
            </value>
            <value>
                <fullName>delayed</fullName>
            </value>
            <value>
                <fullName>UNDELIVERED</fullName>
            </value>
            <value>
                <fullName>picked up1</fullName>
            </value>
            <value>
                <fullName>rto in transit</fullName>
            </value>
            <value>
                <fullName>rto undelivered</fullName>
            </value>
            <value>
                <fullName>misrouted</fullName>
            </value>
            <value>
                <fullName>out of delivery area</fullName>
            </value>
            <value>
                <fullName>rto out for delivery</fullName>
            </value>
            <value>
                <fullName>rto processing</fullName>
            </value>
            <value>
                <fullName>shortage</fullName>
            </value>
            <value>
                <fullName>reached at origin</fullName>
            </value>
            <value>
                <fullName>rto delivered</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>