force-app/main/default/objects/Delivery_Track__c/listViews/Shopify_ORder_Delivery_Status.listView-meta.xml
<ListView>
    <fullName>Shopify_ORder_Delivery_Status</fullName>
    <columns>Order__c</columns>
    <columns>NAME</columns>
    <columns>Updated_Date__c</columns>
    <columns>Status__c</columns>
    <columns>Remark__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Mine</filterScope>
    <label>Shopify ORder Delivery Status</label>
</ListView>